# bmi270-rust

./: .gitignore  Cargo.toml  readme.md
src/: app30_spi.rs  bmi270.rs  bmi270_config_file.rs  bmi270_defs.rs  main.rs  sensor.rs
