[package]
edition = "2021"
name = "accel"
version = "0.1.0"
authors = ["Pashupati Chatterji <98045715+pnchatterji@users.noreply.github.com>"]
resolver = "2"

[dependencies]
defmt = {version = "0.3", features = ["encoding-raw"]}  #alt: "encoding-rzcobs"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

cortex-m-rt = "0.7.3"

embassy-executor = { version = "0.5.0", features = ["task-arena-size-1024", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers", "executor-interrupt"] }
embassy-sync = { version = "0.5.0" }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
embassy-nrf = { version = "0.1.0", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
#vector3d = "0.2.1"
heapless = { version = "0.8", default-features = false }
#lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
